--- a/package.json
+++ b/package.json
@@ -1,168 +1,147 @@
 {
-    "name": "@equinor/fusion-components",
-    "version": "2.4.5",
-    "description": "Common react components used by fusion core and fusion apps",
-    "main": "dist/index.js",
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "scripts": {
-        "test": "jest",
-        "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
-        "storybook": "start-storybook -p 9001 -c .storybook",
-        "clear:storybook": "rm -rf node_modules/.cache/storybook",
-        "start": "npm run clear:storybook && start-storybook -p 9001",
-        "build:storybook": "build-storybook -c .storybook -o ./docs --no-dll",
-        "prebuild": "rm -rf dist",
-        "build": "webpack",
-        "postbuild": "tsc --emitDeclarationOnly true",
-        "docker:build": "DOCKER_BUILDKIT=1 docker build -o dist .",
-        "format": "prettier --write ./src",
-        "lint": "npx eslint './src/**/*.{js,ts,tsx}' --quiet"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/equinor/fusion-components.git"
-    },
-    "keywords": [
-        "fusion",
-        "react",
-        "components"
-    ],
-    "author": "Fusion Core",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/equinor/fusion-components/issues"
-    },
-    "homepage": "https://github.com/equinor/fusion-components#readme",
-    "devDependencies": {
-        "@babel/core": "^7.12.13",
-        "@babel/plugin-proposal-class-properties": "^7.12.13",
-        "@babel/plugin-proposal-decorators": "^7.12.13",
-        "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-        "@babel/preset-env": "^7.14.5",
-        "@babel/preset-react": "^7.12.13",
-        "@babel/preset-typescript": "^7.12.13",
-        "@equinor/fusion": "3.3.0",
-        "@storybook/addon-actions": "^6.1.17",
-        "@storybook/addon-docs": "^6.1.21",
-        "@storybook/addon-essentials": "^6.1.21",
-        "@storybook/addon-knobs": "^6.1.17",
-        "@storybook/addon-options": "^5.3.21",
-        "@storybook/addon-storyshots": "^6.1.21",
-        "@storybook/addon-viewport": "^6.1.17",
-        "@storybook/addons": "^6.1.17",
-        "@storybook/builder-webpack5": "^6.3.0-alpha.21",
-        "@storybook/react": "^6.1.21",
-        "@storybook/theming": "^6.1.17",
-        "@types/classnames": "^2.2.11",
-        "@types/enzyme": "^3.10.8",
-        "@types/history": "^4.7.8",
-        "@types/react": "^17.0.1",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router": "^5.1.11",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/storybook__react": "^5.2.1",
-        "@types/tinycolor2": "^1.4.2",
-        "@types/uuid": "^8.3.0",
-        "adaptivecards": "^2.7.0",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.2.2",
-        "babel-plugin-require-context-hook": "^1.0.0",
-        "cache-loader": "^4.1.0",
-        "classnames": "^2.2.6",
-        "css-loader": "^5.0.2",
-        "dompurify": "^2.2.6",
-        "dotenv-webpack": "^7.0.2",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
-        "eslint": "^7.19.0",
-        "eslint-config-airbnb": "18.2.1",
-        "eslint-config-prettier": "^7.2.0",
-        "eslint-import-resolver-webpack": "^0.13.0",
-        "eslint-loader": "^3.0.3",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jsx-a11y": "6.4.1",
-        "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-react": "^7.22.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.1.0",
-        "history": "^4.10.1",
-        "html-webpack-plugin": "^5.0.0",
-        "identity-obj-proxy": "^3.0.0",
-        "jsdom": "^16.4.0",
-        "less": "^4.1.1",
-        "less-loader": "^7.3.0",
-        "lit-element": "^2.4.0",
-        "lit-html": "^1.3.0",
-        "marked": "^2.0.3",
-        "powerbi-client": "2.18.5",
-        "prettier": "^2.2.1",
-        "prettier-loader": "^3.3.0",
-        "prettier-stylelint": "^0.4.2",
-        "prop-types": "^15.7.2",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-is": "^17.0.1",
-        "react-router-dom": "^5.0.1",
-        "react-test-renderer": "^17.0.1",
-        "storybook": "^6.2.5",
-        "style-loader": "^2.0.0",
-        "terser-webpack-plugin": "^5.1.1",
-        "thread-loader": "^3.0.1",
-        "ts-loader": "^8.0.16",
-        "typesafe-actions": "^5.1.0",
-        "typescript": "^4.1.3",
-        "url-loader": "^4.1.1",
-        "uuid": "^8.3.2",
-        "webpack": "^5.21.2",
-        "webpack-cli": "^4.5.0",
-        "webpack-merge": "^5.7.3"
-    },
-    "peerDependencies": {
-        "@equinor/fusion-react-styles": "^3.2.4",
-        "@equinor/fusion": "^3.2.4",
-        "history": "^4.9.0",
-        "pixi.js-legacy": "^5.3.7",
-        "powerbi-client": "^2.18.5",
-        "react": "^17.0.x",
-        "react-router-dom": "5.x"
-    },
-    "resolutions": {
-        "babel-core": "7.0.0-bridge.0"
-    },
-    "files": [
-        "/dist"
-    ],
-    "dependencies": {
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
-        "@equinor/fusion-react-styles": "^0.2.1",
-        "@equinor/fusion-wc-icon": "^1.0.2",
-        "@reach/router": "^1.3.4",
-        "@storybook/addon-jest": "^6.2.9",
-        "@types/lodash.throttle": "^4.1.6",
-        "@types/prosemirror-model": "^1.11.2",
-        "@types/prosemirror-state": "^1.2.6",
-        "@types/prosemirror-view": "^1.17.1",
-        "@typescript-eslint/eslint-plugin": "^4.15.0",
-        "@typescript-eslint/parser": "^4.15.0",
-        "@webcomponents/custom-elements": "^1.4.3",
-        "clsx": "^1.1.1",
-        "date-fns": "^2.17.0",
-        "loader-utils": "^2.0.0",
-        "lodash.throttle": "^4.1.1",
-        "npm-force-resolutions": "0.0.3",
-        "pixi.js-legacy": "^5.3.7",
-        "prosemirror-commands": "^1.1.5",
-        "prosemirror-history": "^1.1.3",
-        "prosemirror-inputrules": "^1.1.3",
-        "prosemirror-keymap": "^1.1.4",
-        "prosemirror-markdown": "^1.5.1",
-        "prosemirror-schema-basic": "^1.1.2",
-        "prosemirror-schema-list": "^1.1.4",
-        "prosemirror-state": "^1.3.4",
-        "prosemirror-view": "^1.17.5",
-        "rxjs": "^7.0.0"
-    }
+  "name": "@equinor/fusion-components",
+  "version": "1.4.25-1",
+  "description": "Common react components used by fusion core and fusion apps",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "test": "jest",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "start": "start-storybook -p 9001 -c .storybook",
+    "build:storybook": "build-storybook -c .storybook -o ./docs",
+    "prebuild": "rm -rf dist",
+    "build": "webpack",
+    "postbuild": "tsc --emitDeclarationOnly true",
+    "docker:build": "DOCKER_BUILDKIT=1 docker build -o dist ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/equinor/fusion-components.git"
+  },
+  "keywords": [
+    "fusion",
+    "react",
+    "components"
+  ],
+  "author": "Fusion Core",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/equinor/fusion-components/issues"
+  },
+  "homepage": "https://github.com/equinor/fusion-components#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@equinor/fusion": "^2.4.12",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-jest": "^6.0.21",
+    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-options": "^5.3.21",
+    "@storybook/addon-storyshots": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/react": "^6.0.21",
+    "@storybook/theming": "^6.0.21",
+    "@types/classnames": "^2.2.7",
+    "@types/enzyme": "^3.9.1",
+    "@types/history": "^4.7.5",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/storybook__react": "^5.2.1",
+    "@types/tinycolor2": "^1.4.2",
+    "@types/uuid": "^3.4.7",
+    "adaptivecards": "^1.2.5",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "cache-loader": "^4.1.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^3.4.2",
+    "dompurify": "^2.0.8",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "7.21.4",
+    "file-loader": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.1",
+    "history": "^4.9.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "jsdom": "^16.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^6.1.0",
+    "lit-element": "^2.3.1",
+    "lit-html": "^1.2.1",
+    "marked": "^1.0.0",
+    "pixi.js": "^5.2.4",
+    "powerbi-client": "^2.14.1",
+    "prettier": "^2.0.2",
+    "prettier-loader": "^3.3.0",
+    "prettier-stylelint": "^0.4.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
+    "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.8.6",
+    "style-loader": "^1.1.3",
+    "thread-loader": "^2.1.3",
+    "ts-jest": "^25.1.0",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.7.3",
+    "url-loader": "^4.0.0",
+    "uuid": "^3.4.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.1"
+  },
+  "peerDependencies": {
+    "react": "^16.13.x",
+    "@equinor/fusion": "2.2.x",
+    "react-router-dom": "5.x",
+    "history": "^4.9.0",
+    "powerbi-client": "^2.8.0",
+    "pixi.js": "^5.2.4"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
+  "files": [
+    "/dist"
+  ],
+  "dependencies": {
+    "@types/lodash.throttle": "^4.1.6",
+    "@types/prosemirror-model": "^1.7.3",
+    "@types/prosemirror-state": "^1.2.5",
+    "@types/prosemirror-view": "^1.15.1",
+    "@webcomponents/custom-elements": "^1.4.2",
+    "date-fns": "^2.14.0",
+    "lodash.throttle": "^4.1.1",
+    "prosemirror-commands": "^1.1.4",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-inputrules": "^1.1.2",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-markdown": "^1.4.5",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-schema-list": "^1.1.2",
+    "prosemirror-state": "^1.3.3",
+    "prosemirror-view": "^1.14.13"
+  }
 }
