--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "postbuild": "tsc --emitDeclarationOnly true",
     "docker:build": "DOCKER_BUILDKIT=1 docker build -o dist .",
     "format": "prettier --write ./src",
-    "lint": "npx eslint './src/**/*.{js,ts,tsx}' --quiet",
-    "preinstall": "npx npm-force-resolutions"
+    "lint": "npx eslint './src/**/*.{js,ts,tsx}' --quiet"
   },
   "repository": {
     "type": "git",
@@ -38,6 +37,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
@@ -113,9 +113,9 @@
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.1.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "webpack-merge": "^5.7.3"
   },
   "peerDependencies": {
     "react": "^17.0.x",
@@ -126,14 +126,13 @@
     "pixi.js-legacy": "^5.3.3"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0",
-    "acorn": "8.0.4"
+    "babel-core": "7.0.0-bridge.0"
   },
   "files": [
     "/dist"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@reach/router": "^1.3.4",
     "@storybook/addons": "^6.1.0-beta.2",
     "@types/lodash.throttle": "^4.1.6",
