--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@equinor/fusion-components",
   "version": "2.0.0-3",
   "description": "Common react components used by fusion core and fusion apps",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -10,7 +11,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "clear:storybook": "rm -rf node_modules/.cache/storybook",
     "start": "npm run clear:storybook && start-storybook -p 9001",
-    "build:storybook": "build-storybook -c .storybook -o ./docs",
+    "build:storybook": "build-storybook -c .storybook -o ./docs --no-dll",
     "prebuild": "rm -rf dist",
     "build": "webpack",
     "postbuild": "tsc --emitDeclarationOnly true",
@@ -50,6 +51,7 @@
     "@storybook/addon-options": "^5.3.21",
     "@storybook/addon-storyshots": "^6.1.17",
     "@storybook/addon-viewport": "^6.1.17",
+    "@storybook/addons": "^6.1.17",
     "@storybook/react": "^6.1.17",
     "@storybook/theming": "^6.1.17",
     "@types/classnames": "^2.2.11",
@@ -88,7 +90,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "history": "^4.10.1",
-    "html-webpack-plugin": "^5.0.0-beta.6",
+    "html-webpack-plugin": "^5.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
@@ -107,6 +109,7 @@
     "react-is": "^17.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^17.0.1",
+    "storybook": "^6.1.17",
     "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
     "ts-jest": "^26.5.0",
@@ -116,7 +119,8 @@
     "uuid": "^8.3.2",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "terser-webpack-plugin": "^5.1.1"
   },
   "peerDependencies": {
     "react": "^17.0.x",
@@ -135,7 +139,6 @@
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
     "@reach/router": "^1.3.4",
-    "@storybook/addons": "^6.1.17",
     "@types/lodash.throttle": "^4.1.6",
     "@types/prosemirror-model": "^1.11.2",
     "@types/prosemirror-state": "^1.2.6",
@@ -156,7 +159,6 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
-    "prosemirror-view": "^1.17.5",
-    "storybook": "^6.1.17"
+    "prosemirror-view": "^1.17.5"
   }
 }
