--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "thread-loader": "^3.0.1",
     "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.16",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
