--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@equinor/fusion-components",
-  "version": "2.0.3-pr-939.2",
+  "version": "2.0.2",
   "description": "Common react components used by fusion core and fusion apps",
   "main": "dist/index.js",
   "module": "dist/index.js",
