--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
   ],
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
+    "@equinor/fusion-wc-icon": "^1.0.2",
     "@reach/router": "^1.3.4",
     "@types/lodash.throttle": "^4.1.6",
     "@types/prosemirror-model": "^1.11.2",
