--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
-    "@equinor/fusion": "^3.1.1",
+    "@equinor/fusion": "^3.1.12",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-docs": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
@@ -139,6 +139,7 @@
   ],
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
+    "@equinor/fusion-wc-icon": "^1.0.2",
     "@reach/router": "^1.3.4",
     "@types/lodash.throttle": "^4.1.6",
     "@types/prosemirror-model": "^1.11.2",
