--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "2.2.21",
+    "version": "2.2.21-beta.3",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -39,7 +39,7 @@
         "@babel/plugin-proposal-class-properties": "^7.12.13",
         "@babel/plugin-proposal-decorators": "^7.12.13",
         "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-        "@babel/preset-env": "^7.12.13",
+        "@babel/preset-env": "^7.14.5",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.12.13",
         "@equinor/fusion": "3.2.4",
