--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     ],
     "dependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
+        "@equinor/fusion-react-styles": "^0.2.1",
         "@equinor/fusion-wc-icon": "^1.0.2",
         "@reach/router": "^1.3.4",
         "@storybook/addon-jest": "^6.2.9",
