--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
         "lit-element": "^2.4.0",
         "lit-html": "^1.3.0",
         "marked": "^2.0.3",
-        "powerbi-client": "^2.14.1",
+        "powerbi-client": "2.18.5",
         "prettier": "^2.2.1",
         "prettier-loader": "^3.3.0",
         "prettier-stylelint": "^0.4.2",
@@ -124,7 +124,7 @@
         "@equinor/fusion": "^3.2.4",
         "history": "^4.9.0",
         "pixi.js-legacy": "^5.3.7",
-        "powerbi-client": "^2.14.1",
+        "powerbi-client": "^2.18.5",
         "react": "^17.0.x",
         "react-router-dom": "5.x"
     },
