--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@equinor/fusion-components",
-    "version": "2.4.7",
+    "version": "2.4.8-position-timeline.0",
     "description": "Common react components used by fusion core and fusion apps",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -122,7 +122,6 @@
     },
     "peerDependencies": {
         "@equinor/fusion": "^3.2.4",
-        "@equinor/fusion-react-styles": "^0.3.0",
         "history": "^4.9.0",
         "pixi.js-legacy": "^5.3.7",
         "powerbi-client": "^2.18.5",
@@ -137,7 +136,8 @@
     ],
     "dependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
-        "@equinor/fusion-react-styles": "^0.3.0",
+        "@equinor/fusion-react-checkbox": "^0.3.1",
+        "@equinor/fusion-react-styles": "^0.3.1",
         "@equinor/fusion-wc-icon": "^1.0.2",
         "@reach/router": "^1.3.4",
         "@storybook/addon-jest": "^6.2.9",
