--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
         "@equinor/fusion-wc-icon": "^1.0.2",
         "@reach/router": "^1.3.4",
         "@storybook/addon-jest": "^6.2.9",
+        "@storybook/manager-webpack5": "^6.3.10",
         "@types/lodash.throttle": "^4.1.6",
         "@types/prosemirror-model": "^1.11.2",
         "@types/prosemirror-state": "^1.2.6",
