--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "jest",
         "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
         "storybook": "start-storybook -p 9001 -c .storybook",
-        "clear:storybook": "rm -rf node_modules/.cache/storybook",
+        "clear:storybook": "rimraf node_modules/.cache/storybook",
         "start": "npm run clear:storybook && start-storybook -p 9001",
         "build:storybook": "build-storybook -c .storybook -o ./docs --no-dll",
         "prebuild": "rm -rf dist",
@@ -52,6 +52,7 @@
         "@storybook/addon-viewport": "^6.1.17",
         "@storybook/addons": "^6.1.17",
         "@storybook/builder-webpack5": "^6.3.0-alpha.21",
+        "@storybook/manager-webpack5": "^6.3.10",
         "@storybook/react": "^6.1.21",
         "@storybook/theming": "^6.1.17",
         "@types/classnames": "^2.2.11",
@@ -142,7 +143,6 @@
         "@equinor/fusion-wc-icon": "^1.0.2",
         "@reach/router": "^1.3.4",
         "@storybook/addon-jest": "^6.2.9",
-        "@storybook/manager-webpack5": "^6.3.10",
         "@types/lodash.throttle": "^4.1.6",
         "@types/prosemirror-model": "^1.11.2",
         "@types/prosemirror-state": "^1.2.6",
