--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@types/classnames": "^2.2.11",
         "@types/enzyme": "^3.10.8",
         "@types/history": "^4.7.8",
+        "@types/marked": "^4.0.1",
         "@types/react": "^17.0.1",
         "@types/react-dom": "^17.0.0",
         "@types/react-router": "^5.1.11",
