--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "dependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
         "@equinor/fusion-react-checkbox": "^0.4.0",
+        "@equinor/fusion-react-divider": "^0.2.8",
         "@equinor/fusion-react-icon": "^0.2.6",
         "@equinor/fusion-react-styles": "^0.4.0",
         "@equinor/fusion-wc-icon": "^1.0.17",
