--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "@babel/preset-env": "^7.14.5",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.12.13",
-        "@equinor/fusion": "3.3.0",
+        "@equinor/fusion": "^3.3.17",
         "@storybook/addon-actions": "^6.1.17",
         "@storybook/addon-docs": "^6.1.21",
         "@storybook/addon-essentials": "^6.1.21",
@@ -139,6 +139,7 @@
     "dependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
         "@equinor/fusion-react-checkbox": "^0.4.0",
+        "@equinor/fusion-react-divider": "^0.2.8",
         "@equinor/fusion-react-icon": "^0.2.6",
         "@equinor/fusion-react-styles": "^0.4.0",
         "@equinor/fusion-wc-icon": "^1.0.17",
