--- a/package.json
+++ b/package.json
@@ -120,15 +120,27 @@
         "uuid": "^8.3.2",
         "webpack": "^5.21.2",
         "webpack-cli": "^4.5.0",
-        "webpack-merge": "^5.7.3"
+        "webpack-merge": "^5.7.3",
+        "@storybook/addon-jest": "^6.2.9",
+        "@types/lodash.throttle": "^4.1.6",
+        "@types/prosemirror-model": "^1.11.2",
+        "@types/prosemirror-state": "^1.2.6",
+        "@types/prosemirror-view": "^1.17.1"
     },
     "peerDependencies": {
+        "@types/react": "^16.9.0 || ^17.0.0",
         "@equinor/fusion": "^3.2.4",
-        "history": "^4.9.0",
+        "history": "^4.9.0 || ^5.0.0",
         "pixi.js-legacy": "^5.3.7",
         "powerbi-client": "^2.18.5",
-        "react": "^17.0.x",
-        "react-router-dom": "5.x || ^6.0.0"
+        "react": "^16.9.0 || ^17.0.0",
+        "react-router-dom": "^5.0.0 || ^6.0.0",
+        "rxjs": "^7.0.0"
+    },
+    "peerDependenciesMeta": {
+        "@types/react": {
+            "optional": true
+        }
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
@@ -143,12 +155,6 @@
         "@equinor/fusion-react-icon": "^0.2.6",
         "@equinor/fusion-react-styles": "^0.4.0",
         "@equinor/fusion-wc-icon": "^1.0.17",
-        "@reach/router": "^1.3.4",
-        "@storybook/addon-jest": "^6.2.9",
-        "@types/lodash.throttle": "^4.1.6",
-        "@types/prosemirror-model": "^1.11.2",
-        "@types/prosemirror-state": "^1.2.6",
-        "@types/prosemirror-view": "^1.17.1",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "@webcomponents/custom-elements": "^1.4.3",
@@ -167,7 +173,6 @@
         "prosemirror-schema-basic": "^1.1.2",
         "prosemirror-schema-list": "^1.1.4",
         "prosemirror-state": "^1.3.4",
-        "prosemirror-view": "^1.17.5",
-        "rxjs": "^7.0.0"
+        "prosemirror-view": "^1.17.5"
     }
 }
